| Summary: | ASTERISK-26723: VoiceMailPlayMsg not playing messages via realtime | ||||
| Reporter: | Ryan Rittgarn (rrittgarn) | Labels: | |||
| Date Opened: | 2017-01-17 11:12:22.000-0600 | Date Closed: | 2017-02-14 16:29:53.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_voicemail Applications/app_voicemail/ODBC | ||
| Versions: | 13.13.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Debian Jessie - 4 cores, 4GB Ram, 40GB HD | Attachments: | ( 0) app_voicemail-PlaybackMessage.diff ( 1) app_voicemail-PlaybackMessage.diff | ||
| Description: | When attempting to use VoiceMailPlayMsg with a realtime data backend the message is located, but not played and the application returns failure as its result.
I have gone as far as to try and populate the raw file in place to test if the app_voicemail code was still trying to read the file from disk instead of the ODBC source and that was unsuccessful and my test file was deleted. app_voicemail works fine otherwise - i am able to log in, listen to messages, delete them, etc. without issue. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2017-01-17 11:12:23.187-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Ryan Rittgarn (rrittgarn) 2017-01-17 13:23:25.882-0600 The attached patch appears to me to work, but could use review. Thanks By: Rusty Newton (rnewton) 2017-01-18 09:18:11.096-0600 We require additional debug to continue with triage of your issue. Please follow the instructions on the wiki [1] for how to collect debugging information from Asterisk. For expediency, where possible, attach the debug with a '.txt' file extension so that the debug will be usable for further analysis. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Rusty Newton (rnewton) 2017-01-18 09:20:25.976-0600 Please attach any debug to the issue with More > Attach Files and use a .txt extension. I just saw that you attached a patch. However your license has not been accepted yet so it won't show up on the issue. Once your license is accepted, please re-attach the patch. In addition once your license has been accepted you should be able to access Gerrit and push your patch into the review process. https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage Thanks Ryan! By: Ryan Rittgarn (rrittgarn) 2017-01-19 11:21:39.719-0600 How long does the license usually take to be accepted? Just curious. Thanks By: Rusty Newton (rnewton) 2017-01-19 13:05:11.960-0600 [~rrittgarn] Normally just a day or two, unless there is a problem with it. In that case you would receive an E-mail from Digium's general counsel letting you know about the issue. If it hasn't been processed within two days let me know and I'll ping someone. By: Ryan Rittgarn (rrittgarn) 2017-01-25 16:57:37.742-0600 So I think I got everything through Gerrit correctly... I hope... https://gerrit.asterisk.org/#/c/4817/ Did I miss anything? By: Rusty Newton (rnewton) 2017-01-27 08:32:59.414-0600 [~rrittgarn] at a glance it looks like you followed the process correctly, however you may still need to cherry-pick your changes to other branches. https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage#GerritUsage-CherryPick In addition you will want to modify your commit message to reference this issue ASTERISK-26723. That way when the Gerrit issue is closed our scripts will auto-close this ticket. https://wiki.asterisk.org/wiki/display/AST/Commit+Messages#CommitMessages-IssueReferencing Thanks Ryan! By: Ryan Rittgarn (rrittgarn) 2017-02-13 11:03:55.267-0600 Went and cherry picked against 14 and master. Tried to do another git review 13 and received an error: rrittgarn@Deb-RRittgarn:~/projects/asterisk-13$ git review 13 Errors running git rebase -p -i remotes/gerrit/13 error: could not apply 5760526... Update UPGRADE.txt for 13 branch When you have resolved this problem, run "git rebase --continue". If you prefer to skip this patch, run "git rebase --skip" instead. To check out the original branch and stop rebasing, run "git rebase --abort". Could not pick 5760526f69ad02189c8e385e2e974be4cba11b6e Was trying to push my ammended commit with the issue in the comment. By: Richard Mudgett (rmudgett) 2017-02-13 11:31:04.911-0600 You have a merge conflict between your patch and what is currently in the repository on gerrit. You need to update your repository, rebase your patch, and manually resolve the conflict. Then you can resubmit the patch. By: Friendly Automation (friendly-automation) 2017-02-14 16:29:54.246-0600 Change 4817 merged by zuul: app_voicemail: VoiceMailPlayMsg did not play database stored messages [https://gerrit.asterisk.org/4817|https://gerrit.asterisk.org/4817] By: Friendly Automation (friendly-automation) 2017-02-14 16:43:30.147-0600 Change 4934 merged by zuul: app_voicemail: VoiceMailPlayMsg did not play database stored messages [https://gerrit.asterisk.org/4934|https://gerrit.asterisk.org/4934] By: Friendly Automation (friendly-automation) 2017-02-14 17:19:08.384-0600 Change 4933 merged by zuul: app_voicemail: VoiceMailPlayMsg did not play database stored messages [https://gerrit.asterisk.org/4933|https://gerrit.asterisk.org/4933] | ||||